--- a/localisation/eur_countries_l_english.yml
+++ b/localisation/eur_countries_l_english.yml
@@ -570,7 +570,7 @@
  EC9_3:0 "Generale polder"
  EC9_3_desc:0 "The Generale polder is a council of sorts made up of artificers, enginners, urban planners, the admirality and lizardfolk tribal leaders. It is the ruling council of our technocracy. Giving our lesser 'allies' representation means we can work together better."
  EC9_4:0 "A new Hierarchy"
- EC9_4_desc:0 "The Hierarch has been destroyed in the great catastrophy known as the Dragonwake. Now we are the last remnant of gnomekind, destined to build a new Hierarchy here in Sarhal."
+ EC9_4_desc:0 "The Hierarchy has been destroyed in the great catastrophy known as the Dragonwake. Now we are the last remnant of gnomekind, destined to build a new Hierarchy here in Sarhal."
  EC9_5:0 "Wood plantations"
  EC9_5_desc:0 "It can be hard to get our hands on sufficient wood for shipbuilding. To remedy this issue we have started wood plantations were fast growing tree's are grown to produce high quality wood for our ship building efforts."
  EC9_6:0 "Merchant diplomacy"
