Buffed shock a wee bit and added a new bonus to adventurer ideas in the form of new mercs

--- a/localisation/replace/powers_and_ideas_l_english.yml
+++ b/localisation/replace/powers_and_ideas_l_english.yml
@@ -70,7 +70,7 @@
  adven_ide6:0 "Adventurers Guild"
  adven_ide6_desc:0 "Branch offices all over the world let us send an army anywhere, to solve any quest."
  adven_ide7:0 "Lucky Soldiers"
- adven_ide7_desc:0 "Every twentieth man in our army is seemingly impossibly lucky, cutting down any foe before him."
+ adven_ide7_desc:0 "Every twentieth man in our army is seemingly impossibly lucky, cutting down any foe before him. \n§MOur Nation will gain access to three free of Professionalism Mercenary Companies§!"
  adventurer_ideas_vaass_bonus:0 "Completed Adventurer Ideas"
 
 
